data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_495.wast
;; 6. **Test Description**: Insert `nop` in a sequence of `br_table` instructions and verify proper fall-through behavior and target jumps.    **Constraint Checked**: `nop` doesn’t interfere with `br_table` jump targets.    **Relation to CFG**: Ensures each branch target is correctly interpreted in the table without disruption by `nop`.

(assert_invalid
  (module
    (func $test_br_table (param i32)
      (block $target1
        (block $target2
          (br_table $target1 $target2 (local.get 0) (nop))
        )
      )
    )
  )
  "invalid target"
)